# aya-example

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh
bpf/: Cargo.toml
bpf/src/: lib.rs
bpf/src/xdp_drop/: main.rs  mod.rs
probe/: Cargo.toml
probe/src/: lib.rs
probe/src/xdp_drop/: main.rs
src/: helper.rs
