[package]
name = "bpf"
version = "0.1.0"
edition = "2018"


[dependencies]
aya-bpf = { git="https://github.com/alessandrod/aya", branch="main" }
aya-bpf-cty = { git="https://github.com/alessandrod/aya", branch="main" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "xdp_drop"
path = "src/xdp_drop/main.rs"
