[package]
name = "probe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya-bpf = { git="https://github.com/alessandrod/aya", branch="main" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
path = "src/lib.rs"

[[bin]]
name = "xdp_drop"
path = "src/xdp_drop/main.rs"
